# CameraWidget

./: CMakeLists.txt  CamerViewImageProvider.cpp  CamerViewImageProvider.h  ViewPort.cpp  ViewPort.h  ViewPort.qml  ViewPortImageProvider.h  camera.qml  camera.qrc  main.cpp
